--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,8 @@
+
 plugins {
-    id 'java'
     id("com.github.johnrengelman.shadow") version "7.1.2"
+    id("java")
+    id("maven-publish")// тут указываем айди проекта шедоу
 }
 
 group = 'me.redtea'
@@ -24,6 +26,8 @@ dependencies {
     implementation 'dev.triumphteam:triumph-gui:3.1.2'
 }
 
+
+
 def targetJavaVersion = 8
 java {
     def javaVersion = JavaVersion.toVersion(targetJavaVersion)
@@ -34,10 +38,23 @@ java {
     }
 }
 
+
+
+
+
+
+
+publishing {
+    publications {
+        maven(MavenPublication) {
+            from components.java
+        }
+    }
+}
+
 tasks.withType(JavaCompile).configureEach {
     if (targetJavaVersion >= 10 || JavaVersion.current().isJava10Compatible()) {
         options.release = targetJavaVersion
-        options.encoding = "UTF-8"
     }
 }
 
@@ -49,26 +66,3 @@ processResources {
         expand props
     }
 }
-
-tasks {
-    compileJava {
-        options.encoding = Charsets.UTF_8.name() // We want UTF-8 for everything
-    }
-    processResources {
-        filteringCharset = Charsets.UTF_8.name() // We want UTF-8 for everything
-    }
-    jar {
-        archiveFileName.set("${rootProject.name}-no-shade-${rootProject.version}.${archiveExtension.getOrElse("jar")}") //тут у нас билдится без релокации нужный пакетов через shadow
-    }
-    shadowJar {
-        archiveFileName.set("${rootProject.name}.${archiveExtension.getOrElse("jar")}") //тут билдится уже со всеми указанными артефактами которые идут как API
-    }
-    build {
-        dependsOn(shadowJar)
-    }
-
-    artifacts {
-        archives(shadowJar)
-    }
-}
-
