--- a/build.gradle
+++ b/build.gradle
@@ -6,7 +6,7 @@ plugins {
 }
 
 group = 'me.redtea'
-version = '1.1.7'
+version = '1.1.8'
 
 repositories {
     mavenCentral()
@@ -25,6 +25,7 @@ repositories {
 dependencies {
     compileOnly 'org.spigotmc:spigot-api:1.16.5-R0.1-SNAPSHOT'
 
+    implementation 'com.zaxxer:HikariCP:5.0.1'
     implementation 'com.google.inject:guice:5.1.0'
     implementation 'org.projectlombok:lombok:1.18.24'
     annotationProcessor 'org.projectlombok:lombok:1.18.24'
@@ -37,7 +38,7 @@ dependencies {
 
 
 
-def targetJavaVersion = 8
+def targetJavaVersion = 17
 java {
     def javaVersion = JavaVersion.toVersion(targetJavaVersion)
     sourceCompatibility = javaVersion
@@ -75,14 +76,15 @@ processResources {
         expand props
     }
 }
-
 shadowJar {
     //Storage based relocations
-    relocate("com.google.inject", "com.google.inject")
+    /*relocate("com.google.inject", "com.google.inject")
     relocate("org.projectlombok:lombok:1.18.24", "org.projectlombok")
     relocate("me.mattstudios.utils", "me.mattstudios.utils")
     relocate("dev.triumphteam.gui", "dev.triumphteam.gui")
     relocate("com.github.cryptomorin", "com.github.cryptomorin")
+
+     */
 }
 artifacts {
     archives(shadowJar)
