--- a/build.gradle
+++ b/build.gradle
@@ -6,7 +6,7 @@ plugins {
 }
 
 group = 'me.redtea'
-version = '1.1.9'
+version = '1.2.1'
 
 repositories {
     mavenCentral()
@@ -20,25 +20,32 @@ repositories {
     }
     maven { url = 'https://oss.sonatype.org/content/repositories/snapshots' }
     maven { url = 'https://oss.sonatype.org/content/repositories/central' }
+    maven {url = uri("https://maven.husk.pro/repository/maven-releases/") }
+    maven {
+        name = 'placeholderapi'
+        url = 'https://repo.extendedclip.com/content/repositories/placeholderapi'
+    }
 }
 
 dependencies {
     compileOnly 'org.spigotmc:spigot-api:1.16.5-R0.1-SNAPSHOT'
+    compileOnly group: 'me.clip', name: 'placeholderapi', version: '2.11.1'
 
-    implementation 'com.zaxxer:HikariCP:5.0.1'
     implementation 'com.google.inject:guice:5.1.0'
+    implementation 'com.google.inject.extensions:guice-assistedinject:5.1.0'
     implementation 'org.projectlombok:lombok:1.18.24'
     annotationProcessor 'org.projectlombok:lombok:1.18.24'
     implementation 'me.mattstudios.utils:matt-framework:1.4.6'
-    implementation 'dev.triumphteam:triumph-gui:3.1.2'
+    implementation 'dev.triumphteam:triumph-gui:3.1.3'
     implementation group: 'com.github.cryptomorin', name: 'XSeries', version: '8.6.1'
-    implementation 'org.xerial:sqlite-jdbc:3.36.0.3'
-    implementation group: 'mysql', name: 'mysql-connector-java', version: '5.1.6'
+    implementation("pro.husk:mysql:1.4.1")
+    implementation("mysql:mysql-connector-java:8.0.30")
+
 }
 
 
 
-def targetJavaVersion = 17
+def targetJavaVersion = 11
 java {
     def javaVersion = JavaVersion.toVersion(targetJavaVersion)
     sourceCompatibility = javaVersion
