--- a/build.gradle
+++ b/build.gradle
@@ -6,17 +6,12 @@ plugins {
 }
 
 group = 'me.redtea'
-version = '1.2.1'
+version = '1.2.2'
 
 repositories {
     mavenCentral()
     maven {
-        url = 'https://hub.spigotmc.org/nexus/content/repositories/snapshots/'
-
-        content {
-            includeGroup 'org.bukkit'
-            includeGroup 'org.spigotmc'
-        }
+        url = uri("https://papermc.io/repo/repository/maven-public/")
     }
     maven { url = 'https://oss.sonatype.org/content/repositories/snapshots' }
     maven { url = 'https://oss.sonatype.org/content/repositories/central' }
@@ -25,10 +20,15 @@ repositories {
         name = 'placeholderapi'
         url = 'https://repo.extendedclip.com/content/repositories/placeholderapi'
     }
+
+    maven {
+        name = "sonatype-oss-snapshots1"
+        url = "https://s01.oss.sonatype.org/content/repositories/snapshots/"
+    }
 }
 
 dependencies {
-    compileOnly 'org.spigotmc:spigot-api:1.16.5-R0.1-SNAPSHOT'
+    compileOnly("io.papermc.paper:paper-api:1.17.1-R0.1-SNAPSHOT")
     compileOnly group: 'me.clip', name: 'placeholderapi', version: '2.11.1'
 
     implementation 'com.google.inject:guice:5.1.0'
@@ -41,11 +41,30 @@ dependencies {
     implementation("pro.husk:mysql:1.4.1")
     implementation("mysql:mysql-connector-java:8.0.30")
 
+    implementation "net.kyori:adventure-text-minimessage:4.11.0"
+
+    implementation('com.github.mfarsikov:kotlite-core:0.9.0') //(2)
+    implementation('org.jetbrains.kotlinx:kotlinx-serialization-json:1.4.0') //(3)
+    implementation('org.xerial:sqlite-jdbc:3.39.3.0') //(4)
+
 }
 
+/*
+dependency:
+kotlin("kapt") version "1.4.31" //(1)
+kotlin("plugin.serialization") version "1.4.31"
+
+kapt("com.github.mfarsikov:kotlite-kapt:0.5.0") //(5)
+
+kapt {
+    arguments {
+        arg("kotlite.db.qualifiedName", "my.pkg.DB") //(6)
+    }
+}
+ */
 
 
-def targetJavaVersion = 11
+def targetJavaVersion = 16
 java {
     def javaVersion = JavaVersion.toVersion(targetJavaVersion)
     sourceCompatibility = javaVersion
@@ -95,5 +114,9 @@ shadowJar {
 }
 artifacts {
     archives(shadowJar)
+}
+
+java {
+    toolchain.languageVersion.set(JavaLanguageVersion.of(16))
 }
 
